analyze recent results (balance issue fix)

--- a/retrain/cr_analysis_usage.ipynb
+++ b/retrain/cr_analysis_usage.ipynb
@@ -29,6 +29,27 @@
     {
      "data": {
       "text/plain": [
+       "'0.86178863'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = cri.load_best_result()\n",
+    "result['test_accuracy']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
        "{'tfhub_module': 'https://tfhub.dev/google/imagenet/resnet_v2_50/feature_vector/1',\n",
        " 'training_steps': 10000,\n",
        " 'learning_rate': '0.001',\n",
@@ -2266,20 +2287,18 @@
        "    'obs': '0.97795963'}}}}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "result = cri.load_best_result()\n",
-    "result['test_accuracy']\n",
     "result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2315,19 +2334,19 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>D00_P00043201_P00_S03</td>\n",
+       "      <td>D00_P00043201_P00_S01</td>\n",
        "      <td>0</td>\n",
        "      <td>43201</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "      <td>in</td>\n",
        "      <td>in</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>D00_P00040101_P00_S08</td>\n",
+       "      <td>D00_P00043701_P00_S08</td>\n",
        "      <td>0</td>\n",
-       "      <td>40101</td>\n",
+       "      <td>43701</td>\n",
        "      <td>0</td>\n",
        "      <td>8</td>\n",
        "      <td>in</td>\n",
@@ -2335,31 +2354,31 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>D00_P00043201_P00_S09</td>\n",
+       "      <td>D00_P00040201_P00_S06</td>\n",
        "      <td>0</td>\n",
-       "      <td>43201</td>\n",
+       "      <td>40201</td>\n",
        "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>oap</td>\n",
-       "      <td>oap</td>\n",
+       "      <td>6</td>\n",
+       "      <td>in</td>\n",
+       "      <td>in</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>D00_P00043101_P00_S04</td>\n",
+       "      <td>D00_P00042401_P00_S01</td>\n",
        "      <td>0</td>\n",
-       "      <td>43101</td>\n",
+       "      <td>42401</td>\n",
        "      <td>0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>1</td>\n",
        "      <td>in</td>\n",
-       "      <td>in</td>\n",
+       "      <td>obs</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>D00_P00039501_P00_S04</td>\n",
+       "      <td>D00_P00043501_P00_S10</td>\n",
        "      <td>0</td>\n",
-       "      <td>39501</td>\n",
+       "      <td>43501</td>\n",
        "      <td>0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>10</td>\n",
        "      <td>in</td>\n",
        "      <td>in</td>\n",
        "    </tr>\n",
@@ -2369,14 +2388,14 @@
       ],
       "text/plain": [
        "                 cr_code  dataset    pid  phase  slice label prediction\n",
-       "0  D00_P00043201_P00_S03        0  43201      0      3    in         in\n",
-       "1  D00_P00040101_P00_S08        0  40101      0      8    in         in\n",
-       "2  D00_P00043201_P00_S09        0  43201      0      9   oap        oap\n",
-       "3  D00_P00043101_P00_S04        0  43101      0      4    in         in\n",
-       "4  D00_P00039501_P00_S04        0  39501      0      4    in         in"
+       "0  D00_P00043201_P00_S01        0  43201      0      1    in         in\n",
+       "1  D00_P00043701_P00_S08        0  43701      0      8    in         in\n",
+       "2  D00_P00040201_P00_S06        0  40201      0      6    in         in\n",
+       "3  D00_P00042401_P00_S01        0  42401      0      1    in        obs\n",
+       "4  D00_P00043501_P00_S10        0  43501      0     10    in         in"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2388,8 +2407,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2454,7 +2475,7 @@
        "obs          11    1   19"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
