move result analysis notebook

--- a/slice_range/utils/analyze_results.ipynb
+++ b/slice_range/utils/analyze_results.ipynb
@@ -2,19 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/Cellar/python/3.6.5_1/Frameworks/Python.framework/Versions/3.6/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
+      "  return f(*args, **kwds)\n"
+     ]
+    }
+   ],
    "source": [
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
     "import cr_interface as cri\n",
     "import cr_analysis as cra"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +34,7 @@
        "'0.8821138'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +55,7 @@
        "9660"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -91,53 +102,53 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>D00_P00043201_P00_S01</td>\n",
+       "      <td>D00_P00035501_P00_S09</td>\n",
        "      <td>0</td>\n",
-       "      <td>43201</td>\n",
+       "      <td>35501</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>9</td>\n",
        "      <td>in</td>\n",
        "      <td>in</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>D00_P00043701_P00_S08</td>\n",
+       "      <td>D00_P00045301_P00_S03</td>\n",
        "      <td>0</td>\n",
-       "      <td>43701</td>\n",
+       "      <td>45301</td>\n",
        "      <td>0</td>\n",
-       "      <td>8</td>\n",
+       "      <td>3</td>\n",
        "      <td>in</td>\n",
        "      <td>in</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>D00_P00040201_P00_S06</td>\n",
+       "      <td>D00_P00043101_P00_S10</td>\n",
        "      <td>0</td>\n",
-       "      <td>40201</td>\n",
+       "      <td>43101</td>\n",
        "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>in</td>\n",
-       "      <td>in</td>\n",
+       "      <td>10</td>\n",
+       "      <td>oap</td>\n",
+       "      <td>oap</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>D00_P00042401_P00_S01</td>\n",
+       "      <td>D00_P00044801_P00_S02</td>\n",
        "      <td>0</td>\n",
-       "      <td>42401</td>\n",
+       "      <td>44801</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>in</td>\n",
-       "      <td>obs</td>\n",
+       "      <td>in</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>D00_P00043501_P00_S10</td>\n",
+       "      <td>D00_P00043701_P00_S02</td>\n",
        "      <td>0</td>\n",
-       "      <td>43501</td>\n",
+       "      <td>43701</td>\n",
        "      <td>0</td>\n",
-       "      <td>10</td>\n",
-       "      <td>in</td>\n",
-       "      <td>in</td>\n",
+       "      <td>2</td>\n",
+       "      <td>oap</td>\n",
+       "      <td>oap</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -145,14 +156,14 @@
       ],
       "text/plain": [
        "                 cr_code  dataset    pid  phase  slice label prediction\n",
-       "0  D00_P00043201_P00_S01        0  43201      0      1    in         in\n",
-       "1  D00_P00043701_P00_S08        0  43701      0      8    in         in\n",
-       "2  D00_P00040201_P00_S06        0  40201      0      6    in         in\n",
-       "3  D00_P00042401_P00_S01        0  42401      0      1    in        obs\n",
-       "4  D00_P00043501_P00_S10        0  43501      0     10    in         in"
+       "0  D00_P00035501_P00_S09        0  35501      0      9    in         in\n",
+       "1  D00_P00045301_P00_S03        0  45301      0      3    in         in\n",
+       "2  D00_P00043101_P00_S10        0  43101      0     10   oap        oap\n",
+       "3  D00_P00044801_P00_S02        0  44801      0      2    in         in\n",
+       "4  D00_P00043701_P00_S02        0  43701      0      2   oap        oap"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -232,7 +243,7 @@
        "obs           8    0   23"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +309,7 @@
        "obs   0.741935  0.741935"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,14 +327,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "confusion = '../analysis/confusion.csv'\n",
+    "pr = '../analysis/precision_recall.csv'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "result_df.get_confusion_matrix().to_csv('confusion.csv')\n",
-    "result_df.get_precision_and_recall().to_csv('precision_recall.csv')"
+    "result_df.get_confusion_matrix().to_csv(confusion)\n",
+    "result_df.get_precision_and_recall().to_csv(pr)"
    ]
   }
  ],
