--- a/slice_range/experiments/dev/classification_metrics.ipynb
+++ b/slice_range/experiments/dev/classification_metrics.ipynb
@@ -18,7 +18,7 @@
    ],
    "source": [
     "import sys\n",
-    "sys.path.append(\"..\")\n",
+    "sys.path.append(\"../..\")\n",
     "import cr_interface as cri\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -343,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
