free_model after use for gpu

--- a/slice_range/experiments/keras_shallow_4/analysis.ipynb
+++ b/slice_range/experiments/keras_shallow_4/analysis.ipynb
@@ -35,6 +35,8 @@
     "            results[app.codename] = kh.load_test_result(app.get_model())\n",
     "        except Exception:\n",
     "            pass\n",
+    "        finally:\n",
+    "            app.free_model()\n",
     "    return pd.DataFrame(results)"
    ]
   },
