--- a/experiments/deep_2/deep_2_graph.ipynb
+++ b/experiments/deep_2/deep_2_graph.ipynb
@@ -17,9 +17,11 @@
    ],
    "source": [
     "from collections import defaultdict\n",
+    "\n",
     "import core.history as ch\n",
     "import core.fine_model as cm\n",
     "from core.fine_model import FineModel\n",
+    "\n",
     "import cr_interface as cri\n",
     "import keras_utils as ku\n",
     "\n",
@@ -161,6 +163,8 @@
     "depth = len(fm.depths) - 1\n",
     "results = []\n",
     "for i, depth in enumerate(fm.depths):\n",
+    "    fm.save_weights('new_exp')\n",
+    "    fm.load_weights('new_exp')  # mobilenet\n",
     "    fm.load_weights('D{:02d}'.format(i))\n",
     "    fm.compile_model()\n",
     "    result = fm.get_model().evaluate_generator(\n",
@@ -225,6 +229,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
