--- a/experiments/deep_3/d3_results.ipynb
+++ b/experiments/deep_3/d3_results.ipynb
@@ -16,8 +16,21 @@
     "import cr_interface as cri\n",
     "import cr_analysis as cra\n",
     "\n",
-    "imp.reload(core.fine_model)\n",
+    "import core.fine_model\n",
     "from core.fine_model import FineModel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "imp.reload(cri)\n",
+    "imp.reload(core.fine_model)\n",
+    "imp.reload(cra)"
    ]
   },
   {
@@ -38,32 +51,24 @@
    },
    "outputs": [],
    "source": [
-    "fm.load_weights('EXP98_D00_L00_F00')\n",
+    "key = 'EXP98_D00_L00_F00'\n",
+    "fm.load_weights(key)\n",
     "fm.compile_model()\n",
     "test = cri.CrCollection.load().filter_by(dataset_index=1).tri_label().labeled()\n",
-    "result = fm.generate_test_result(test)"
+    "result = fm.generate_test_result(test, save_to_key=key)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
+    "cra.get_results()\n",
+    "result = cra.select_result()\n",
     "print(result.describe())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "result.to_json('EXP00_D00_L00_F00')"
    ]
   }
  ],
