update results moduel in deep_3 exp

--- a/experiments/deep_3/d3_results.ipynb
+++ b/experiments/deep_3/d3_results.ipynb
@@ -17,30 +17,9 @@
     "import cr_analysis as cra\n",
     "\n",
     "import core.fine_model\n",
-    "from core.fine_model import FineModel"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "imp.reload(cri)\n",
-    "imp.reload(core.fine_model)\n",
-    "imp.reload(cra)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fm = FineModel.get_dict()['mobileneta25']()\n",
-    "fm.get_weight_keys()"
+    "from core.fine_model import FineModel\n",
+    "\n",
+    "import results"
    ]
   },
   {
@@ -51,11 +30,54 @@
    },
    "outputs": [],
    "source": [
-    "key = 'EXP98_D00_L00_F00'\n",
-    "fm.load_weights(key)\n",
-    "fm.compile_model()\n",
-    "test = cri.CrCollection.load().filter_by(dataset_index=1).tri_label().labeled()\n",
-    "result = fm.generate_test_result(test, save_to_key=key)"
+    "imp.reload(cri)\n",
+    "imp.reload(core.fine_model)\n",
+    "imp.reload(cra)\n",
+    "imp.reload(results)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Find Weight Key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "fm = FineModel.get_dict()['mobileneta25']()\n",
+    "fm.get_weight_keys()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate results via `.results.generate_test_results`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "results.generate_test_result(fm, 'EXP00_D00_L00_F00')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load and explore results via `cra.get_results`"
    ]
   },
   {
