update d3_main notebook

--- a/experiments/deep_3/d3_main.ipynb
+++ b/experiments/deep_3/d3_main.ipynb
@@ -8,13 +8,16 @@
    },
    "outputs": [],
    "source": [
-    "import main"
+    "import main\n",
+    "import imp"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "imp.reload(main)"
@@ -30,13 +33,6 @@
    "source": [
     "main.main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
